--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "run": "node server.js"
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
